@@ -24,7 +24,7 @@ public class CalculateManager {
 
     private final BattleDrones plugin;
 
-    public CalculateManager(final BattleDrones plugin) {
+    public CalculateManager(BattleDrones plugin) {
         this.plugin = plugin;
     }
 
@@ -32,15 +32,15 @@ public class CalculateManager {
     public final ArrayList<Double> y = new ArrayList<>();
     public final ArrayList<Double> z = new ArrayList<>();
 
-    public void damage(final LivingEntity livingEntity, final double damage) {
-        final PotionEffect effect = livingEntity.getPotionEffect(PotionEffectType.INSTANT_DAMAGE);
-        final int resistance = effect == null ? 0 : effect.getAmplifier();
+    public void damage(LivingEntity livingEntity, double damage) {
+        PotionEffect effect = livingEntity.getPotionEffect(PotionEffectType.INSTANT_DAMAGE);
+        int resistance = effect == null ? 0 : effect.getAmplifier();
         int e = 0;
         if (livingEntity instanceof Player) {
             e = getEnchant(((Player) livingEntity).getInventory());
         }
-        final AttributeInstance armor = livingEntity.getAttribute(Attribute.ARMOR);
-        final AttributeInstance toughness = livingEntity.getAttribute(Attribute.ARMOR_TOUGHNESS);
+        AttributeInstance armor = livingEntity.getAttribute(Attribute.ARMOR);
+        AttributeInstance toughness = livingEntity.getAttribute(Attribute.ARMOR_TOUGHNESS);
         double armorValue = 0;
         if (armor != null) {
             armorValue = armor.getValue();
@@ -49,38 +49,38 @@ public class CalculateManager {
         if (toughness != null) {
             toughnessValue = toughness.getValue();
         }
-        final double dialed = dialed(damage, armorValue, toughnessValue, resistance, e);
+        double dialed = dialed(damage, armorValue, toughnessValue, resistance, e);
         livingEntity.damage(dialed);
     }
 
-    private int getEnchant(final PlayerInventory inv) {
-        final ItemStack helm = inv.getHelmet();
-        final ItemStack chest = inv.getChestplate();
-        final ItemStack legs = inv.getLeggings();
-        final ItemStack boot = inv.getBoots();
+    private int getEnchant(PlayerInventory inv) {
+        ItemStack helm = inv.getHelmet();
+        ItemStack chest = inv.getChestplate();
+        ItemStack legs = inv.getLeggings();
+        ItemStack boot = inv.getBoots();
         return (helm != null ? helm.getEnchantmentLevel(Enchantment.PROTECTION) : 0) +
                 (chest != null ? chest.getEnchantmentLevel(Enchantment.PROTECTION) : 0) +
                 (legs != null ? legs.getEnchantmentLevel(Enchantment.PROTECTION) : 0) +
                 (boot != null ? boot.getEnchantmentLevel(Enchantment.PROTECTION) : 0);
     }
 
-    private double dialed(final double damage, final double armor, final double toughness, final int resistance, final int enchant) {
+    private double dialed(double damage, double armor, double toughness, int resistance, int enchant) {
         return damage * (1 - Math.min(20, Math.max(armor / 5, armor - damage / (2 + toughness / 4))) / 25) * (1 - (resistance * 0.2)) * (1 - (Math.min(20.0, enchant) / 25));
     }
 
-    public String getFirerate(final double firerate) {
-        final DecimalFormat decimalFormat = (DecimalFormat) NumberFormat.getNumberInstance(new Locale("en", "UK"));
+    public String getFirerate(double firerate) {
+        DecimalFormat decimalFormat = (DecimalFormat) NumberFormat.getNumberInstance(Locale.of("en", "GB"));
         decimalFormat.applyPattern("#.##");
         return decimalFormat.format(20 / firerate);
     }
 
-    public String getBar(final int current, final int max, final String path, final String extra) {
-        final char xp = (char) Integer.parseInt(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + "." + path + ".symbol")).substring(2), 16);
-        final char none = (char) Integer.parseInt(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + ".none.symbol")).substring(2), 16);
-        final ChatColor xpColor = getChatColor(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + "." + path + ".color")));
-        final ChatColor noneColor = getChatColor(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + ".none.color")));
-        final int bars = plugin.getFileUtils().config.getInt(path + extra + ".amount");
-        final int progressBars = (bars * getPercent(current, max) / 100);
+    public String getBar(int current, int max, String path, String extra) {
+        char xp = (char) Integer.parseInt(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + "." + path + ".symbol")).substring(2), 16);
+        char none = (char) Integer.parseInt(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + ".none.symbol")).substring(2), 16);
+        ChatColor xpColor = getChatColor(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + "." + path + ".color")));
+        ChatColor noneColor = getChatColor(Objects.requireNonNull(plugin.getFileUtils().config.getString(path + extra + ".none.color")));
+        int bars = plugin.getFileUtils().config.getInt(path + extra + ".amount");
+        int progressBars = (bars * getPercent(current, max) / 100);
         try {
             return Strings.repeat("" + xpColor + xp, progressBars) + Strings.repeat("" + noneColor + none, bars - progressBars);
         } catch (Exception exception) {
@@ -88,20 +88,20 @@ public class CalculateManager {
         }
     }
 
-    public int getPercent(final int current, final int max) {
+    public int getPercent(int current, int max) {
         if (current > max) {
             return 100;
         }
-        final double percent = ((double) current / (double) max) * 100;
+        double percent = ((double) current / (double) max) * 100;
         return (int) Math.round(percent);
     }
 
-    public int getProcentFromDouble(final double current) {
-        final double percent = current * 100;
+    public int getProcentFromDouble(double current) {
+        double percent = current * 100;
         return (int) Math.round(percent);
     }
 
-    public boolean isInt(final String s) {
+    public boolean isInt(String s) {
         try {
             Integer.parseInt(s);
         } catch(NumberFormatException e) {
@@ -110,7 +110,7 @@ public class CalculateManager {
         return true;
     }
 
-    public boolean isFloat(final String s) {
+    public boolean isFloat(String s) {
         try {
             Float.parseFloat(s);
         } catch (NumberFormatException e) {
@@ -119,11 +119,11 @@ public class CalculateManager {
         return true;
     }
 
-    public boolean isString(final String text) {
+    public boolean isString(String text) {
         return text.matches("^[a-zA-Z]*$");
     }
 
-    public double randomDouble(final double min, final double max) {
+    public double randomDouble(double min, double max) {
         return min + Math.random() * (max - min);
     }
 
@@ -131,31 +131,31 @@ public class CalculateManager {
         return new Random().nextFloat();
     }
 
-    public ChatColor getChatColor(final String colorCode){
-        switch (colorCode){
-            case "&0" : return ChatColor.BLACK;
-            case "&1" : return ChatColor.DARK_BLUE;
-            case "&2" : return ChatColor.DARK_GREEN;
-            case "&3" : return ChatColor.DARK_AQUA;
-            case "&4" : return ChatColor.DARK_RED;
-            case "&5" : return ChatColor.DARK_PURPLE;
-            case "&6" : return ChatColor.GOLD;
-            case "&7" : return ChatColor.GRAY;
-            case "&8" : return ChatColor.DARK_GRAY;
-            case "&9" : return ChatColor.BLUE;
-            case "&a" : return ChatColor.GREEN;
-            case "&b" : return ChatColor.AQUA;
-            case "&c" : return ChatColor.RED;
-            case "&d" : return ChatColor.LIGHT_PURPLE;
-            case "&e" : return ChatColor.YELLOW;
-            case "&f" : return ChatColor.WHITE;
-            case "&k" : return ChatColor.MAGIC;
-            case "&l" : return ChatColor.BOLD;
-            case "&m" : return ChatColor.STRIKETHROUGH;
-            case "&n" : return ChatColor.UNDERLINE;
-            case "&o" : return ChatColor.ITALIC;
-            case "&r" : return ChatColor.RESET;
-            default: return ChatColor.WHITE;
-        }
+    public ChatColor getChatColor(String colorCode){
+        return switch (colorCode) {
+            case "&0" -> ChatColor.BLACK;
+            case "&1" -> ChatColor.DARK_BLUE;
+            case "&2" -> ChatColor.DARK_GREEN;
+            case "&3" -> ChatColor.DARK_AQUA;
+            case "&4" -> ChatColor.DARK_RED;
+            case "&5" -> ChatColor.DARK_PURPLE;
+            case "&6" -> ChatColor.GOLD;
+            case "&7" -> ChatColor.GRAY;
+            case "&8" -> ChatColor.DARK_GRAY;
+            case "&9" -> ChatColor.BLUE;
+            case "&a" -> ChatColor.GREEN;
+            case "&b" -> ChatColor.AQUA;
+            case "&c" -> ChatColor.RED;
+            case "&d" -> ChatColor.LIGHT_PURPLE;
+            case "&e" -> ChatColor.YELLOW;
+            case "&f" -> ChatColor.WHITE;
+            case "&k" -> ChatColor.MAGIC;
+            case "&l" -> ChatColor.BOLD;
+            case "&m" -> ChatColor.STRIKETHROUGH;
+            case "&n" -> ChatColor.UNDERLINE;
+            case "&o" -> ChatColor.ITALIC;
+            case "&r" -> ChatColor.RESET;
+            default -> ChatColor.WHITE;
+        };
     }
 }
